--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,26 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.flexbox {
+  display: flex;
+  justify-content: space-between;
+  grid-gap: 16px;
+  padding: 1em;
+  width: 100%;
+}
+
+
+
+// .navbar-lewagon {
+  // justify-content: space-between;
+  // background: white;
+// }
+//
+// .navbar-lewagon .navbar-collapse {
+  // flex-grow: 0;
+// }
+//
+// .navbar-lewagon .navbar-brand img {
+  // width: 40px;
+// }
+//
