--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,8 @@
   background-size: cover;
   background-position: center;
   padding: 150px 3em;
+  margin-right: -20%;
+  margin-left: -20%;
 
   h1 {
     margin: 0;
