--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,8 +2,9 @@
   background-size: cover;
   background-position: center;
   padding: 150px 3em;
-  margin-right: -20%;
-  margin-left: -20%;
+  position: absolute;
+  width: 100vw;
+  left: calc(-50vw + 50%);
 
   h1 {
     margin: 0;
