--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,23 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="row mt-3">
+  <div class="col-6 gx-2">
+    <div class="card-trip">
+      <img src="https://media.ldlc.com/r1600/ld/products/00/05/98/68/LD0005986898.jpg"/>
+      <div class="card-trip-infos">
+          <h2>Notre concept :</h2>
+          <p>Louer une montre près de chez vous !</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 gx-2">
+    <div class="card-trip">
+      <img src="https://media.ldlc.com/r1600/ld/products/00/05/98/68/LD0005986898.jpg"/>
+        <div class="card-trip-infos">
+          <h2>Nos avantages :</h2>
+          <p> des montres de qualité</p>
+          <p>une très large gamme de produits</p>
+        </div>
+      </div>
+  </div>
+  </div>
+</div>
