--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -1,18 +1,17 @@
   <div class="flexbox">
     <% @watches.each do |watch| %>
-      <div class="card rounded">
+      <div class="card shadow">
         <%= link_to(watches_show_path) do %>
-          <%= image_tag(watch.url) %>
+          <%= image_tag watch.url, class:"card_img rounded" %>
         <% end %>
-        <div class="d-flex justify-content-between d-flex align-items-center">
+        <div class="d-flex justify-content-between d-flex align-items-center text_display">
           <%= watch.brand.upcase %>
           <div style="height:30px"></div>
           <%= watch.price_per_day %> €
         </div>
       </div>
     <% end %>
-    <br>
   </div>
-  <div class="my-1">
-    <%= link_to "Create", watches_create_path(@watches), data: {turbo_method: :create, turbo_confirm: "OK to Create a new Watch?"}, class: "btn btn-primary mx-1"%>
+  <div class="my-2">
+    <%= link_to "Create", watches_create_path(@watches), data: {turbo_method: :create, turbo_confirm: "OK to Create a new Watch?"}, class: "btn btn-primary"%>
   </div>
