--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,9 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 150px 3em;
-  position: absolute;
-  width: 100vw;
-  left: calc(-50vw + 50%);
+  width: 100%;
 
   h1 {
     margin: 0;
