--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Watches#show</h1>
-<p>Find me in app/views/watches/show.html.erb</p>
+<%= @watch.brand %>
+<%= cl_image_tag(@watch.photo.key) %>
