--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,2 +1,15 @@
 <h1>Watches#show</h1>
 <p>Find me in app/views/watches/show.html.erb</p>
+
+<%= simple_form_for [@watch, @booking], data: { controller: "datepicker" } do |f| %>
+  <div class="form-inputs">
+    <%#= f.label :start_date, "Date de début de la location" %>
+    <%= f.input :start_date, as: :string, input_html: { data: { datepicker_target: "startTime" } } %>
+    <%#= f.label :end_date, "Date de fin de la location" %>
+    <%= f.input :end_date, as: :string, input_html: { data: { datepicker_target: "endTime" } }%>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
+<% end %>
