--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -1,9 +1,9 @@
 .container {
-  background-color: #FFFFFF;
+  background-color: #F4F4F4;
   margin-top: 2em;
   margin-bottom: 2em;
   border-radius: 4px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
 
   .watch-title {
     display: flex;
