--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,35 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://magazine.chrono24.com/cdn-cgi/image/f=auto,metadata=none,fit=cover,q=65,w=1190,h=595,dpr=2.0/2023/01/Rolex-Datejust-under-the-radar-2-1.jpg);">
-    <h1>Cocowatch</h1>
-    <p>Change and discover the beauty of time.</p>
+  <h1>Cocowatch</h1>
+  <p>Change and discover the beauty of time.</p>
     <%= link_to "Find a co-watcher", watches_path, class: "btn btn-flat btn-dark rounded"%>
-
 </div>
 
-<div class="row mt-3">
-  <div class="col-6 gx-2">
-    <div class="card-trip">
-      <img src="https://media.ldlc.com/r1600/ld/products/00/05/98/68/LD0005986898.jpg"/>
-      <div class="card-trip-infos">
-          <h2>Notre concept :</h2>
-          <p>Louer une montre près de chez vous !</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-6 gx-2">
-    <div class="card-trip">
-      <img src="https://media.ldlc.com/r1600/ld/products/00/05/98/68/LD0005986898.jpg"/>
+<div class="container">
+  <div class="row mt-3">
+    <div class="col-6 gx-2">
+      <div class="card-trip">
+        <%# <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.svgrepo.com%2Fsvg%2F130076%2Fwatch&psig=AOvVaw076soY5fS8c1LNoh5ltgXb&ust=1709205461428000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNDB4dT0zYQDFQAAAAAdAAAAABAE"/> %>
         <div class="card-trip-infos">
-          <h2>Nos avantages :</h2>
-          <p> des montres de qualité</p>
-          <p>une très large gamme de produits</p>
+        <h2>Rent <strong>someone</strong> watch</h2>
+            <ul>
+            <li><i class="fas fa-search"></i> Discover a large range of fabulous watch near you</li>
+            <li><i class="fas fa-user-friends"></i> Rent from passionate owner</li>
+            <li><i class="fas fa-clock"></i> From iconic little budget watches to big occasion one</li>
+            </ul>
         </div>
       </div>
+    </div>
+    <div class="col-6 gx-2">
+      <div class="card-trip">
+        <div class="card-trip-infos">
+            <h2>Rent <strong>your</strong> watch</h2>
+            <ul>
+            <li><i class="fas fa-shield-alt"></i> Rent your watch hassle-free with our special insurance policy</li>
+            <li><i class="fas fa-dollar-sign"></i> Generate income with your watch collection</li>
+            <li><i class="fas fa-heart"></i> Meet and share your passion with other passionate</li>
+            </ul>
+          </div>
+        </div>
+    </div>
   </div>
 </div>
