--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -1,9 +1,14 @@
 .container {
+  display: flex;
   background-color: #F4F4F4;
   margin-top: 2em;
   margin-bottom: 2em;
   border-radius: 4px;
 
+  .form-book {
+    margin-left: auto;
+    padding-top: 3em;
+  }
 
   .watch-title {
     display: flex;
@@ -16,26 +21,24 @@
     margin-left: 1em;
   }
 
+  .watch-description {
+   margin-left: 2em;
+  }
+}
+
+.watch-card {
+  width: 70%;
+}
+
+.form-actions {
+  background-color: lightgrey;
+  color: white;
 }
 
 .watch-price {
   margin-left: auto;
 }
 
-.watch-content {
-  display: flex;
-
-  .watch-img {
-    margin-right: 1em;
-    margin-bottom: 1em;
-  }
-}
-
-.btn-book {
-  margin-left: auto;
-  margin-top: auto;
-  margin-bottom: 1em;
-}
 
 
 
