modification texte de la homepage + correction truly dans footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
         <div class="card-trip-infos">
         <h2>Rent <strong>someone</strong> watch</h2>
             <ul>
-            <li><i class="fas fa-search"></i> Discover a large range of fabulous watch near you</li>
+            <li><i class="fas fa-search"></i> Discover a large range of fabulous watches near you</li>
             <li><i class="fas fa-user-friends"></i> Rent from passionate owner</li>
             <li><i class="fas fa-clock"></i> From iconic little budget watches to big occasion one</li>
             </ul>
@@ -26,7 +26,7 @@
             <ul>
             <li><i class="fas fa-shield-alt"></i> Rent your watch hassle-free with our special insurance policy</li>
             <li><i class="fas fa-dollar-sign"></i> Generate income with your watch collection</li>
-            <li><i class="fas fa-heart"></i> Meet and share your passion with other passionate</li>
+            <li><i class="fas fa-heart"></i> Meet and share your passion with other passionate people</li>
             </ul>
           </div>
         </div>
