--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,6 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    Trully yours, <i class="fas fa-heart"></i> Coco Watch
+    Truly yours, <i class="fas fa-heart"></i> Coco Watch
   </div>
 </div>
