--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -1,9 +1,11 @@
-.container {
+.container-1 {
   display: flex;
   background-color: #F4F4F4;
   margin-top: 2em;
   margin-bottom: 2em;
   border-radius: 4px;
+  margin-right: 3em;
+  margin-left: 3em;
 
   .form-book {
     margin-left: auto;
