--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,7 +8,6 @@
   grid-gap: 16px;
   justify-self: auto;
   padding-top: 1em;
-  border-radius: 10px;
   padding-bottom: 1em;
 }
 
@@ -18,7 +17,7 @@
   object-fit: cover;
   object-position: center;
   padding: 4px;
-  border-radius: 5px
+  border-radius: 10px
 }
 
 .text_display {
@@ -27,9 +26,27 @@
 }
 
 .card_height {
-  height: 200px;
+  height: 250px;
 }
 
 .text_heigh {
   height:30px;
+}
+
+.text_brand {
+  color: dimgrey;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+
+.text_model {
+  font-style: italic;
+  color: gray;
+}
+
+.card_border {
+  border-radius: 6px
+}
+.price_style {
+  font-weight: bold;
 }
