--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -1,21 +1,28 @@
-.container-1 {
+.watch-card-container {
   display: flex;
-  background-color: #F4F4F4;
+  background-color: black;
+  color: white;
   margin-top: 2em;
   margin-bottom: 2em;
   border-radius: 4px;
   margin-right: 3em;
   margin-left: 3em;
+  padding: 2em;
 
   .form-book {
     margin-left: auto;
-    padding-top: 3em;
+    padding: 2em;
+    background-color: rgb(25, 25, 25);
+    border-radius: 4px;
   }
 
   .watch-title {
     display: flex;
     align-items: flex-end;
     padding-top: 2em;
+    margin-bottom: 1em;
+    border-bottom: solid white 1px;
+
   }
 
   .watch-title p {
@@ -23,23 +30,22 @@
     margin-left: 1em;
   }
 
-  .watch-description {
-   margin-left: 2em;
-  }
 }
 
 .watch-card {
   width: 70%;
 }
 
+.watch-price {
+  margin-top: auto;
+  float: inline-end;
+  padding-right: 1em;
+}
 .form-actions {
   background-color: lightgrey;
   color: white;
 }
 
-.watch-price {
-  margin-left: auto;
-}
 
 
 
