--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,18 @@
+<div class="container-fluid">
+  <div class="row">
+    <!-- Sidebar -->
+    <div class="col-md-2" style="height: 100vh; background-color: #ffffff;">
+      <div class="sidebar-sticky">
+        <h4>Your Details</h4>
+        <%= image_tag current_user.avatar, class: "avatar" %>
+        <p><%= current_user.first_name %> <%= current_user.last_name %></p>
+        <!-- Add more user details as needed -->
+      </div>
+      <div>
+      </div>
+    </div>
+
+<div class="col-md-10">
 <div class="container mt-5">
   <h1>My Dashboard</h1>
   <h3>My Bookings:</h3>
@@ -50,4 +65,6 @@
       </div>
     <% end %>
   </div>
+</div>
+</div>
 </div>
