--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -9,20 +9,17 @@
   margin-left: 3em;
   padding: 2em;
 
-  .form-book {
-    margin-left: auto;
-    padding: 2em;
-    background-color: rgb(25, 25, 25);
+  .watch-img img {
     border-radius: 4px;
+    margin-right: 2em;
   }
 
   .watch-title {
     display: flex;
     align-items: flex-end;
-    padding-top: 2em;
     margin-bottom: 1em;
     border-bottom: solid white 1px;
-
+    margin-left: 1em;
   }
 
   .watch-title p {
@@ -30,22 +27,40 @@
     margin-left: 1em;
   }
 
+  .form-book {
+    margin-left: auto;
+    padding: 2em;
+    background-color: rgb(25, 25, 25);
+    border-radius: 4px;
+  }
 }
 
-.watch-card {
-  width: 70%;
+.watch-description {
+  margin-left: 1em;
+}
+
+.card-content {
+  width: 100%;
 }
 
 .watch-price {
-  margin-top: auto;
-  float: inline-end;
   padding-right: 1em;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
+
 .form-actions {
   background-color: lightgrey;
   color: white;
 }
 
+.watch-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-right: 1em;
+}
 
 
 
