--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,40 +1,42 @@
 <div class="watch-card-container">
-  <div class="watch-img">
-    <img src="<%= @watch.url %>" alt="watch_image" width="200px">
-  </div>
+  <div class="card-content d-flex">
+    <div class="watch-img">
+      <img src="<%= @watch.url %>" alt="watch_image" height="100%" >
+    </div>
 
-  <div class="watch-card d-block">
-    <div class="title">
-      <div class="watch-title">
-        <h1><%= @watch.brand %></h1>
-        <p><%= @watch.model %></p>
+    <div class="watch-card d-block">
+      <div class="title">
+        <div class="watch-title">
+          <h1><%= @watch.brand %></h1>
+          <p><%= @watch.model %></p>
+        </div>
+      </div>
+
+      <div class="watch-description">
+        <h4>Watch description :</h4>
+        <p><%= @watch.description %></p>
+      </div>
+
+      <div class="watch-price d-flex">
+        <h3>$<strong><%= @watch.price_per_day %></strong></h3>
+        <p>/day</p>
       </div>
     </div>
 
-    <div class="watch-description">
-      <h4>Watch description :</h4>
-      <p><%= @watch.description %></p>
-    </div>
-
-  </div>
-    <div class="watch-price d-flex">
-      <h3>$<strong><%= @watch.price_per_day %></strong></h3>
-      <p>/day</p>
-    </div>
-
-  <div class="form-book">
     <% if @watch.user != current_user %>
-    <h2>Booking :</h2>
-      <%= simple_form_for [@watch, @booking], data: { controller: "datepicker" } do |f| %>
-        <div class="form-inputs">
-          <%= f.input :start_date, as: :string, input_html: { data: { datepicker_target: "startTime" } } %>
-          <%= f.input :end_date, as: :string, input_html: { data: { datepicker_target: "endTime" } }%>
-        </div>
+      <div class="form-book">
+        <h2>Booking :</h2>
+          <%= simple_form_for [@watch, @booking], data: { controller: "datepicker" } do |f| %>
+            <div class="form-inputs">
+                <%= f.input :start_date, as: :string, input_html: { data: { datepicker_target: "startTime" } } %>
+                <%= f.input :end_date, as: :string, input_html: { data: { datepicker_target: "endTime" } }%>
+            </div>
 
-        <div class="form-actions rounded px-1em text-center text-white">
-          <%= f.button :submit %>
-        </div>
+            <div class="form-actions rounded px-1em text-center">
+              <%= f.button :submit %>
+            </div>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
   </div>
 </div>
