Fixed fixed Watch card

--- a/app/assets/stylesheets/components/_watch_cards.scss
+++ b/app/assets/stylesheets/components/_watch_cards.scss
@@ -12,6 +12,8 @@
   .watch-img img {
     border-radius: 4px;
     margin-right: 2em;
+    max-height: 314px;
+    max-width: 314px;
   }
 
   .watch-title {
