ajout watch form dans une modal

--- a/app/views/shared/_form_watches.html.erb
+++ b/app/views/shared/_form_watches.html.erb
@@ -1,6 +1,11 @@
 <div class="container pt-2 pb-2">
   <div class="p-3 rounded">
-    <%= simple_form_for (@watch), data: { controller: "datepicker" } do |f| %>
+    <%= simple_form_for (@watch),
+                        data: {
+                          controller: "datepicker",
+                          action: "submit->watch-form#submit",
+                          watch_form_target: "form"
+                        } do |f| %>
       <div class="form-inputs">
         <%= f.input :brand, label: false, placeholder: "brand" %>
         <%= f.input :photo, as: :file, label: false, placeholder: "image" %>
@@ -10,10 +15,6 @@
         <%= f.input :price_per_day, label: false, placeholder: "price" %>
         <%= f.input :available_from, as: :string, input_html: { data: { datepicker_target: "startTime" } } %>
         <%= f.input :available_until, as: :string, input_html: { data: { datepicker_target: "endTime" } } %>
-        <%= f.input :controller_action,
-                    input_html: {
-                      value: "#{params[:controller]}/#{params[:action]}"
-                    } %>
         <% if local_assigns[:for_watch] %>
           <%= f.submit class: "btn btn-outline-secondary" %>
           <% else %>
