--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,5 +1,4 @@
 .sidebar-sticky {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   height: 100vh;
@@ -11,4 +10,15 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+}
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+  height: 100%;
+  margin-top: 2em;
+}
+.flex-center p {
+  padding-top: 10px;
 }
