--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
     <div class="content">
     <%= yield %>
     </div>
-    <%= render "shared/footer" %>
+    <%= render "shared/footer" unless action_name == "dashboard" %>
   </body>
 </html>
