V2 ajout watch form dans une modal

--- a/app/views/shared/_watch_created.html.erb
+++ b/app/views/shared/_watch_created.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h3> Vous avez bien créé votre montre <%= watch.model %> </h3>
+  <h4> Vous avez créé votre montre <%= watch.model %> </h4>
   <p> Vous pouvez la retrouver <%= link_to "ici", watch_path(watch) %></p>
 </div>
