--- a/app/views/shared/_form_watches.html.erb
+++ b/app/views/shared/_form_watches.html.erb
@@ -12,6 +12,7 @@
         <%= f.input :model, label: false, placeholder: "model" %>
         <%= f.input :description, label: false, placeholder: "description" %>
         <%= f.input :year, label: false, placeholder: "year" %>
+        <%= f.input :address, label: false, placeholder: "address" %>
         <%= f.input :price_per_day, label: false, placeholder: "price" %>
         <%= f.input :available_from, as: :string, input_html: { data: { datepicker_target: "startTime" } } %>
         <%= f.input :available_until, as: :string, input_html: { data: { datepicker_target: "endTime" } } %>
