Index Watch list

--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
-  <h2>Wathes available</h2>
+<div class="">
+  <h2 class="d-flex justify-content-center py-3 border-bottom bg-black text-white">Watches available</h2>
   <%= render "shared/index" %>
 </div>
