--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -1,31 +1,37 @@
-<div class="flexbox">
-  <% @watches.each do |watch| %>
-    <div class="card card_border shadow">
-        <div class="card_height">
-          <%= link_to(watch_path(watch)) do %>
-            <% if watch.photo.attached? %>
-              <%= cl_image_tag watch.photo.key, class: "card_img" %>
-            <% else %>
-              <%= image_tag watch.url, class:"card_img" %>
+<div class="container">
+  <div class="flexbox">
+    <% @watches.each do |watch| %>
+      <div class="card shadow">
+          <div class="card_height">
+            <%= link_to(watch_path(watch)) do %>
+              <% if watch.photo.attached? %>
+                <%= cl_image_tag watch.photo.key, class: "card_img" %>
+              <% else %>
+                <%= image_tag watch.url, class:"card_img" %>
+              <% end %>
             <% end %>
-          <% end %>
-        </div>
-      <div class="d-flex justify-content-between d-flex align-items-center text_display">
-        <div class="d-flex flex-column">
-          <div class="text_brand" >
-            <%= watch.brand.upcase %>
           </div>
-          <div class="text_model" >
-            <%= watch.model %>
+        <div class="d-flex justify-content-between d-flex align-items-center text_display p-1">
+          <div class="d-flex">
+            <div class="text_brand" >
+              <%= watch.brand.upcase %>
+            </div>
+            <div class="text_model" >
+              <%= watch.model %>
+            </div>
+            <div class="avatar">
+              <%= image_tag watch.user.avatar, class: "avatar" %>
+            </div>
           </div>
         </div>
-          <div style="height:30px"></div>
-        <div class="price_style">
-          <%= watch.price_per_day %><strong> €</strong>
-        </div>
+
+          <div class="location">
+            <p><i class="fa-solid fa-location-dot"></i> <%= watch.address %><p>
+          </div>
+          <div class="price-style">
+            <%= watch.price_per_day %><strong> €</strong>
+          </div>
       </div>
-    </div>
-  <% end %>
-</div>
-<div class="my-2">
+    <% end %>
+  </div>
 </div>
