--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://magazine.chrono24.com/cdn-cgi/image/f=auto,metadata=none,fit=cover,q=65,w=1190,h=595,dpr=2.0/2023/01/Rolex-Datejust-under-the-radar-2-1.jpg);">
   <h1>Cocowatch</h1>
   <p>Change and discover the beauty of time.</p>
-    <%= link_to "Find a co-watcher", watches_path, class: "btn btn-flat btn-dark rounded"%>
+    <%= link_to "Find a co-watcher", watches_path, class: "btn btn-dark rounded"%>
 </div>
 
 <div class="container">
@@ -13,7 +13,7 @@
               params[:query],
               class: "form-control",
               placeholder: "Type a keyword"%>
-        <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+        <%= submit_tag "Search", name: "", class: "btn btn-dark mx-1" %>
       <% end %>
 
     </div>
