--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,4 +32,25 @@
         </div>
     </div>
   </div>
+<div id="carouselExampleControls" class="carousel slide my-4" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.iguanasell.fr/cdn/shop/articles/Portada-Blog_3f8866fa-da80-4acf-8bae-936ff468d052_1800x.jpg?v=1631720095" class="d-block w-100" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src="https://media.gqmagazine.fr/photos/63a2f29c16703168d638c954/16:9/w_2240,c_limit/Montage_Montres.jpg" class="d-block w-100" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src="https://media.gqmagazine.fr/photos/5f04817d83548f5bbff4eb86/16:9/w_2240,c_limit/K10-06-BR03-diver-full-lum-eau.jpg-1600px.JPG" class="d-block w-100" alt="Third slide">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 </div>
