--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -54,6 +54,7 @@
           <span class="d-none" data-dynamic-price-target="price"></span>
         </div>
       <% end %>
+      <% end %>
 </div>
   <div class="container pb-4">
     <div id="map-container" class="rounded shadow"
