--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -1,37 +1,43 @@
-<div class="container">
-  <div class="flexbox">
-    <% @watches.each do |watch| %>
-      <div class="card shadow">
-          <div class="card_height">
-            <%= link_to(watch_path(watch)) do %>
-              <% if watch.photo.attached? %>
-                <%= cl_image_tag watch.photo.key, class: "card_img" %>
-              <% else %>
-                <%= image_tag watch.url, class:"card_img" %>
+<div class="ms-2 me-2">
+  <div class="d-flex justify-content-center">
+    <div class="flexbox col-8">
+      <% @watches.each do |watch| %>
+        <div class="card shadow">
+            <div class="card_height">
+              <%= link_to(watch_path(watch)) do %>
+                <% if watch.photo.attached? %>
+                  <%= cl_image_tag watch.photo.key, class: "card_img" %>
+                <% else %>
+                  <%= image_tag watch.url, class:"card_img" %>
+                <% end %>
               <% end %>
-            <% end %>
+            </div>
+          <div class="d-flex justify-content-between d-flex align-items-center text_display p-1">
+            <div class="d-flex">
+              <div class="text_brand" >
+                <%= watch.brand.upcase %>
+              </div>
+              <div class="text_model" >
+                <%= watch.model %>
+              </div>
+              <div class="avatar">
+                <%= image_tag watch.user.avatar, class: "avatar" %>
+              </div>
+            </div>
           </div>
-        <div class="d-flex justify-content-between d-flex align-items-center text_display p-1">
-          <div class="d-flex">
-            <div class="text_brand" >
-              <%= watch.brand.upcase %>
+            <div class="location">
+              <p><i class="fa-solid fa-location-dot"></i> <%= watch.address %><p>
             </div>
-            <div class="text_model" >
-              <%= watch.model %>
+            <div class="price-style">
+              <%= watch.price_per_day %><strong> €</strong>
             </div>
-            <div class="avatar">
-              <%= image_tag watch.user.avatar, class: "avatar" %>
-            </div>
-          </div>
         </div>
-
-          <div class="location">
-            <p><i class="fa-solid fa-location-dot"></i> <%= watch.address %><p>
-          </div>
-          <div class="price-style">
-            <%= watch.price_per_day %><strong> €</strong>
-          </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
+    <div id="map-container" class="rounded shadow map_integration"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
 </div>
