--- a/app/views/watches/_marker.html.erb
+++ b/app/views/watches/_marker.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag "watch.png", class:"marker" %>
+<%= link_to watch_path(watch) do %>
+  <%= image_tag "watch.png", class:"marker" %>
+<% end %>
