Espace enlevé et ajout du commentaire

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <p>Change and discover the beauty of time.</p>
   <div class="row position mt-5">
       <div class="col-sm-8 ">
-        <%= form_with url: watches_path, method: :get, class: "d-flex " do %>
+        <%= form_with url: watches_path, method: :get, class: "d-flex" do %>
           <%= text_field_tag :query,
                 params[:query],
                 class: "form-control searchbar_placeholder_border col--2",
@@ -13,8 +13,7 @@
       </div>
     </div>
 </div>
-
-
+<!-- Fin de la banner -->
 <div class="container">
   <div class="row mt-3">
     <div class="col-6 gx-2">
